cerate